(fix) chat input visibility, flagsAPI defer loading

--- a/src/app/modules/home/pages/preguntados/preguntados.component.scss
+++ b/src/app/modules/home/pages/preguntados/preguntados.component.scss
@@ -27,6 +27,7 @@
   border-radius: .5em;
   background-color: rgba(0, 0, 0, 0.5);
   color: rgb(125, 255, 138);
+  height: 100%;
 }
 app-game-menu{
   width: 100%;
