--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -14,14 +14,13 @@
   background-color:rgb(71, 71, 71);
 }
 .chat {
-  position: relative;
-  top: 0;
+  position: absolute;
+  bottom: 0;
   left: 0%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  max-height: 100vh;
   width: 40em;
   padding: .5em;
   overflow-y: hidden;
@@ -30,7 +29,6 @@
   gap: .5em;
 }
 .chat-container{
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: baseline;
@@ -39,8 +37,19 @@
   width: 100%;
   border-radius: .5em;
   padding: .1em;
+  flex: 1 1 auto;
+  overflow-y: scroll;
 }
-
+.chat-input {
+  flex-shrink: 0;
+  display: flex;
+  border-radius: .5em;
+  padding: .2em;
+  border-top: 1px solid #ccc;
+  background-color: #f0f0f0;
+  flex: 0 0 auto; /* no crecen, no se encogen, alto = auto */
+  background: #949494;
+}
 
 .message {
   background-color: rgba(255, 255, 255, 0.3);
@@ -58,6 +67,7 @@
   padding: 8px 12px;
   border-radius: 10px;
   width: 60%;
+  color: #888;
 }
 
 .message-sent {
@@ -85,14 +95,6 @@
   color: #888;
 }
 
-.chat-input {
-  flex-shrink: 0;
-  display: flex;
-  border-radius: .5em;
-  padding: .2em;
-  border-top: 1px solid #ccc;
-  background-color: #f0f0f0;
-}
 
 .chat-send-input {
   flex-grow: 1;
